# tmail

./: Cargo.toml  DESIGN.md  LICENSE  README.md  install.sh
.github/workflows/: ci.yml  release.yml
src/: app.rs  cli.rs  config.rs  diag.rs  error.rs  http.rs  main.rs  model.rs  otp.rs  output.rs  store.rs  util.rs  wait.rs
src/commands/: inbox.rs  mod.rs  read.rs  send.rs  wait.rs
src/receive/: mailtm.rs  mod.rs  sse.rs
src/send/: mod.rs  smtp.rs
tests/: contract.rs
